# ai-patient-advocacy-toolkit

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/patient_advocacy/: __init__.py  api.py  cli.py  config.py  db.py  llm.py
src/patient_advocacy/services/: explainer.py  interactions.py  prep.py  rights.py  second_opinion.py
tests/: __init__.py  test_api.py  test_db.py  test_interactions.py  test_rights.py
