[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-patient-advocacy-toolkit"
version = "0.1.0"
description = "Privacy-first AI toolkit helping patients navigate healthcare systems, understand diagnoses, and advocate for their care"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Phoenix Assistant" }]
keywords = ["healthcare", "patient-advocacy", "ai", "privacy", "local-llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "pytest-cov>=4.1.0", "ruff>=0.1.0"]

[project.scripts]
patient-advocate = "patient_advocacy.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
